--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "brcypt": "^1.0.1",
+    "cloudinary": "^1.34.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
